--- a/arch/arm/configs/cyanogenmod_presto_defconfig
+++ b/arch/arm/configs/cyanogenmod_presto_defconfig
@@ -1359,9 +1359,9 @@ CONFIG_LIBRA_SDIOIF=m
 CONFIG_SKY_WLAN=y
 CONFIG_PANMAC=y
 CONFIG_BCM4329=m
+CONFIG_BCM4329_WL_RESET_GPIO=107
 CONFIG_BCM4329_FW_PATH="/etc/wl/bcm43291.bin"
 CONFIG_BCM4329_NVRAM_PATH="/etc/wl/nvram.txt"
-CONFIG_BCM4329_WL_RESET_GPIO=107
 CONFIG_BCM4329_IFACE_NAME="wlan"
 # CONFIG_BCM4329_DEBUG is not set
 CONFIG_BCM4329_SOFTAP=y
@@ -3171,20 +3171,12 @@ CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 # CONFIG_SECURITY_NETWORK_XFRM is not set
 # CONFIG_SECURITY_PATH is not set
-CONFIG_LSM_MMAP_MIN_ADDR=4096
-CONFIG_SECURITY_SELINUX=y
-# CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
-# CONFIG_SECURITY_SELINUX_DISABLE is not set
-CONFIG_SECURITY_SELINUX_DEVELOP=y
-CONFIG_SECURITY_SELINUX_AVC_STATS=y
-CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
-# CONFIG_SECURITY_SELINUX_POLICYDB_VERSION_MAX is not set
+# CONFIG_SECURITY_SELINUX is not set
 # CONFIG_SECURITY_TOMOYO is not set
 # CONFIG_SECURITY_APPARMOR is not set
 # CONFIG_IMA is not set
-CONFIG_DEFAULT_SECURITY_SELINUX=y
-# CONFIG_DEFAULT_SECURITY_DAC is not set
-CONFIG_DEFAULT_SECURITY="selinux"
+CONFIG_DEFAULT_SECURITY_DAC=y
+CONFIG_DEFAULT_SECURITY=""
 CONFIG_CRYPTO=y
 
 #
