Changed "Fix CRT Animation" to a feature
Change-Id: Ifff70752cf8fb821b2b31ba243940af39f7660ea

--- a/arch/arm/mach-msm/cust_sky/Kconfig
+++ b/arch/arm/mach-msm/cust_sky/Kconfig
@@ -222,6 +222,10 @@ config AVOID_COMPILE_ERRORS
 	bool "Patch to avoid kernel compile errors"
 	default y
 
+config PRESTO_CRT_OFF_ANIMATION
+       bool "Fix to crt off animation"
+       default y
+
 config BUG_FIX_LCD_YUV_REVERSE
 	bool
 
