presto: defconfig: enable crt off animation
Change-Id: I07a768c1688d1d57405760db6dea8598a76dfb91

--- a/arch/arm/configs/cyanogenmod_presto_defconfig
+++ b/arch/arm/configs/cyanogenmod_presto_defconfig
@@ -378,6 +378,7 @@ CONFIG_PANTECH_WDOG_WORKAROUND=y
 CONFIG_PANTECH_EXT4_RO_REMOUNT_ON_EMERGENCY_RESET=y
 CONFIG_PANTECH_KERNEL_FS_FIX=y
 CONFIG_AVOID_COMPILE_ERRORS=y
+CONFIG_PRESTO_CRT_OFF_ANIMATION=y
 CONFIG_BUG_FIX_LCD_YUV_REVERSE=y
 CONFIG_F_SKYDISP_QBUG_FIX_BACKLIGHT=y
 CONFIG_F_SKYDISP_BOOT_LOGO_IN_KERNEL=y
