presto: not force feature crt off animation
Change-Id: I06d4c3bd70dc67e563c8ca24fd5158ed595f73d5

--- a/arch/arm/mach-msm/cust_sky/Kconfig
+++ b/arch/arm/mach-msm/cust_sky/Kconfig
@@ -223,8 +223,8 @@ config AVOID_COMPILE_ERRORS
 	default y
 
 config PRESTO_CRT_OFF_ANIMATION
-       bool "Fix to crt off animation"
-       default y
+	bool "Fix to crt off animation"
+	default n
 
 config BUG_FIX_LCD_YUV_REVERSE
 	bool
