presto: not force feature avoid compile errors
Change-Id: I5a4190505316ebfba10193ddd1f339f0ec6605e6

--- a/arch/arm/mach-msm/cust_sky/Kconfig
+++ b/arch/arm/mach-msm/cust_sky/Kconfig
@@ -220,7 +220,7 @@ config PANTECH_KERNEL_FS_FIX
 
 config AVOID_COMPILE_ERRORS
 	bool "Patch to avoid kernel compile errors"
-	default y
+	default n
 
 config PRESTO_CRT_OFF_ANIMATION
 	bool "Fix to crt off animation"
