Bluetooth: bluesleep: add specific presto driver
The file is a duplicate of the original Pantech driver

Change-Id: Icf462620e1ced2e53e180f0762fd9bdd33b5095b

--- a/drivers/bluetooth/Kconfig
+++ b/drivers/bluetooth/Kconfig
@@ -292,4 +292,9 @@ config PANTECH_BT
     help
       Bluetooth PANTECH
 
+config PANTECH_PRESTO_BLUESLEEP
+    bool "Custom presto bluesleep driver"
+    depends on PANTECH_BT && MACH_MSM8X60_PRESTO
+	default y
+
 endmenu
