--- a/drivers/bluetooth/Makefile
+++ b/drivers/bluetooth/Makefile
@@ -32,7 +32,11 @@ hci_uart-$(CONFIG_BT_HCIUART_ATH3K)	+= hci_ath.o
 hci_uart-$(CONFIG_BT_HCIUART_IBS)	+= hci_ibs.o
 hci_uart-objs				:= $(hci_uart-y)
 obj-$(CONFIG_BT_MSM_SLEEP)              += msm_bt_sleep.o
+ifeq ($(CONFIG_PANTECH_PRESTO_BLUESLEEP),y)
+msm_bt_sleep-objs                       := bluesleep-presto.o
+else
 msm_bt_sleep-objs                       := bluesleep.o
+endif
 obj-$(CONFIG_MSM_BT_POWER)		+= bluetooth-power.o
 
 obj-$(CONFIG_BRCM_BT_HID)    += bthid.o
