presto: defconfig: Enable bluesleep for Bluetooth.
For me is best not force any feature, and include this option depending of defconfig, in this way we can test other changes in original files.

Change-Id: I3be998579a6e5b917e8291094b5a41ba5378cb80

--- a/drivers/bluetooth/Kconfig
+++ b/drivers/bluetooth/Kconfig
@@ -295,6 +295,6 @@ config PANTECH_BT
 config PANTECH_PRESTO_BLUESLEEP
     bool "Custom presto bluesleep driver"
     depends on PANTECH_BT && MACH_MSM8X60_PRESTO
-	default y
+	default n
 
 endmenu
