msm: Makefile: correct name to presto camera
Change-Id: Ic7521494e11b31ee04aba6789845e59e1c79f7b4

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -9,7 +9,7 @@ CFLAGS_scm.o :=$(call as-instr,.arch_extension sec,-DREQUIRES_SEC=1)
 ifdef CONFIG_MACH_MSM8X60_PRESTO
     ACPUCLOCK_OBJ_NAME:=acpuclock-presto.o
     BOARD_OBJ_NAME:=board-presto.o
-    BOARD_CAMERA_OBJ_NAME:=board-camera-presto.o
+    BOARD_CAMERA_OBJ_NAME:=board-presto-camera.o
     CLOCK_OBJ_NAME:=clock-presto.o
     DEVICES_OBJ_NAME:=devices-presto.o
     GPIOMUX_OBJ_NAME:=gpiomux-presto.o
