Changed "Fix CRT Animation" to a feature
Change-Id: Ifddc52fe2ca21b27c36be2e72c74b57118a719fb

--- a/arch/arm/mach-msm/pantech/presto/Kconfig
+++ b/arch/arm/mach-msm/pantech/presto/Kconfig
@@ -61,3 +61,7 @@ config PANTECH_PRESTO_LEDS_PMIC
 
 config PANTECH_PRESTO_VIBRATOR_PATCH
 	bool
+
+config PRESTO_CRT_OFF_ANIMATION
+	bool "Fix to crt off animation"
+	default y
