msm: audio: add drivers for Pantech presto
Change-Id: If2c62d1f2cdc6f4bd7958b62a0941f718346ee8b

--- a/arch/arm/mach-msm/pantech/presto/Kconfig
+++ b/arch/arm/mach-msm/pantech/presto/Kconfig
@@ -15,13 +15,26 @@ config DEFINE_LIST_PRESTO
 	select PANTECH_ATNT
 	select PANTECH_PRESTO_BOARD
 	select PANTECH_CAMERA
+	select PANTECH_AUDIO_PRESTO_AUDIENCE2020
+	select PANTECH_AUDIO_PRESTO_FAB2200
+	select PANTECH_AUDIO_SUBCHIP_CAL_TOOL
 	select PANTECH_ERR_CRASH_LOGGING
 	select PANTECH_PWR_ONOFF_REASON_CNT
 	select SW_RESET
 	select PANTECH_WDOG_WORKAROUND
 	select PANTECH_EXT4_RO_REMOUNT_ON_EMERGENCY_RESET
+	select SKY_SND_CTRL
 	select PANTECH_KERNEL_FS_FIX
 endif
 
 config PANTECH_PRESTO_BOARD
 	bool "PANTECH_PRESTO_BOARD Configuration"
+
+config PANTECH_AUDIO_PRESTO_AUDIENCE2020
+	bool
+
+config PANTECH_AUDIO_PRESTO_FAB2200
+	bool
+
+config PANTECH_AUDIO_SUBCHIP_CAL_TOOL
+	bool
