leds: leds-pmic8058: Add modifications for Pantech presto
Change-Id: I7541c77d6fc6b4941e7f35d7a95e2a9453f92d37

--- a/arch/arm/mach-msm/pantech/presto/Kconfig
+++ b/arch/arm/mach-msm/pantech/presto/Kconfig
@@ -25,6 +25,7 @@ config DEFINE_LIST_PRESTO
 	select PANTECH_EXT4_RO_REMOUNT_ON_EMERGENCY_RESET
 	select SKY_SND_CTRL
 	select PANTECH_KERNEL_FS_FIX
+	select PANTECH_PRESTO_LEDS_PMIC
 endif
 
 config PANTECH_PRESTO_BOARD
@@ -37,4 +38,7 @@ config PANTECH_AUDIO_PRESTO_FAB2200
 	bool
 
 config PANTECH_AUDIO_SUBCHIP_CAL_TOOL
+	bool
+
+config PANTECH_PRESTO_LEDS_PMIC
 	bool
