misc: pm8xxx-vibrator: Add modifications for Pantech presto
Change-Id: I924d7bc29f6865431f2811cd1b4fb30fa9bd6485

--- a/arch/arm/mach-msm/pantech/presto/Kconfig
+++ b/arch/arm/mach-msm/pantech/presto/Kconfig
@@ -26,6 +26,7 @@ config DEFINE_LIST_PRESTO
 	select SKY_SND_CTRL
 	select PANTECH_KERNEL_FS_FIX
 	select PANTECH_PRESTO_LEDS_PMIC
+	select PANTECH_PRESTO_VIBRATOR_PATCH
 endif
 
 config PANTECH_PRESTO_BOARD
@@ -41,4 +42,7 @@ config PANTECH_AUDIO_SUBCHIP_CAL_TOOL
 	bool
 
 config PANTECH_PRESTO_LEDS_PMIC
+	bool
+
+config PANTECH_PRESTO_VIBRATOR_PATCH
 	bool
