--- a/arch/arm/configs/cyanogenmod_presto_defconfig
+++ b/arch/arm/configs/cyanogenmod_presto_defconfig
@@ -1123,18 +1123,20 @@ CONFIG_PANTECH_PRESTO_BLUESLEEP=y
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
-CONFIG_WIRELESS_EXT=y
 CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
-CONFIG_WEXT_SPY=y
-CONFIG_WEXT_PRIV=y
-# CONFIG_CFG80211 is not set
+CONFIG_CFG80211=y
+# CONFIG_NL80211_TESTMODE is not set
+# CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
+# CONFIG_CFG80211_REG_DEBUG is not set
+CONFIG_CFG80211_DEFAULT_PS=y
+# CONFIG_CFG80211_DEBUGFS is not set
+# CONFIG_CFG80211_INTERNAL_REGDB is not set
+CONFIG_CFG80211_WEXT=y
 # CONFIG_WIRELESS_EXT_SYSFS is not set
 # CONFIG_LIB80211 is not set
-
-#
-# CFG80211 needs to be enabled for MAC80211
-#
+# CONFIG_CFG80211_ALLOW_RECONNECT is not set
+# CONFIG_MAC80211 is not set
 # CONFIG_WIMAX is not set
 CONFIG_RFKILL=y
 CONFIG_RFKILL_PM=y
@@ -1358,14 +1360,21 @@ CONFIG_SMSC911X=y
 # CONFIG_NETDEV_10000 is not set
 CONFIG_WLAN=y
 # CONFIG_USB_ZD1201 is not set
-CONFIG_LIBRA_SDIOIF=m
+# CONFIG_USB_NET_RNDIS_WLAN is not set
+# CONFIG_LIBRA_SDIOIF is not set
 CONFIG_SKY_WLAN=y
 CONFIG_PANMAC=y
-CONFIG_BCM4329=m
-CONFIG_BCM4329_FW_PATH="/etc/wl/bcm43291.bin"
-CONFIG_BCM4329_NVRAM_PATH="/etc/wl/nvram.txt"
-# CONFIG_BCMDHD is not set
+# CONFIG_ATH_COMMON is not set
+CONFIG_BCMDHD=m
+CONFIG_BCMDHD_FW_PATH="/system/etc/wl/bcm43291.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wl/nvram.txt"
+CONFIG_DHD_USE_STATIC_BUF=y
+# CONFIG_DHD_USE_SCHED_SCAN is not set
+# CONFIG_DHD_ENABLE_P2P is not set
 # CONFIG_HOSTAP is not set
+# CONFIG_IWM is not set
+# CONFIG_LIBERTAS is not set
+# CONFIG_MWIFIEX is not set
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -2796,6 +2805,7 @@ CONFIG_RTC_DRV_PM8XXX=y
 CONFIG_STAGING=y
 # CONFIG_VIDEO_TM6000 is not set
 # CONFIG_USBIP_CORE is not set
+# CONFIG_PRISM2_USB is not set
 # CONFIG_ECHO is not set
 # CONFIG_BRCMUTIL is not set
 # CONFIG_ASUS_OLED is not set
@@ -2833,6 +2843,7 @@ CONFIG_ZSMALLOC=y
 # CONFIG_LIRC_STAGING is not set
 # CONFIG_EASYCAP is not set
 CONFIG_MACH_NO_WESTBRIDGE=y
+# CONFIG_ATH6K_LEGACY is not set
 # CONFIG_USB_ENESTORAGE is not set
 # CONFIG_BCM_WIMAX is not set
 # CONFIG_FT1000 is not set
