--- a/drivers/input/Kconfig
+++ b/drivers/input/Kconfig
@@ -192,6 +192,8 @@ source "drivers/input/serio/Kconfig"
 
 source "drivers/input/gameport/Kconfig"
 
+source "drivers/input/pantech_earjack_int/Kconfig"
+
 endmenu
 
 endmenu
