usb: Implement Pantech modifications
Change-Id: I0767189232cd5f7861d8340147ef64d2864f5493

--- a/arch/arm/mach-msm/pantech/presto/Kconfig
+++ b/arch/arm/mach-msm/pantech/presto/Kconfig
@@ -28,6 +28,7 @@ config DEFINE_LIST_PRESTO
 	select PANTECH_KERNEL_FS_FIX
 	select PANTECH_PRESTO_LEDS_PMIC
 	select PANTECH_PRESTO_VIBRATOR_PATCH
+	select FEATURE_SKY_PDL_DLOAD
 endif
 
 config PANTECH_PRESTO_BOARD
