--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -829,4 +829,10 @@ config TOUCHSCREEN_CYTTSP_I2C
 
          To compile this driver as a module, choose M here: the
          module will be called cyttsp-i2c.
+
+config TOUCHSCREEN_MELFAS_TKI
+    tristate "Melfas Touch Key Interface"
+    depends on I2C && CUST_SKY_H
+    default n
+
 endif
