Add initial presto support.
Change-Id: I1b76a3ecf70b8b6fdec3bdec8fbb98acffadb0b7

--- a/arch/arm/mach-msm/pantech/presto/Kconfig
+++ b/arch/arm/mach-msm/pantech/presto/Kconfig
@@ -16,6 +16,7 @@ config DEFINE_LIST_PRESTO
 	select PANTECH_PRESTO_BOARD
 	select PANTECH_CAMERA
 	select SKY_GSBI12_UART_CONSOLE
+	select PANTECH_MTP
 	select PANTECH_AUDIO_PRESTO_AUDIENCE2020
 	select PANTECH_AUDIO_PRESTO_FAB2200
 	select PANTECH_AUDIO_SUBCHIP_CAL_TOOL
