msm: rotator: Add modifications for Pantech presto
Change-Id: I4358496372ca769299d6bdccd85fcfff843ef878

--- a/arch/arm/mach-msm/pantech/presto/Kconfig
+++ b/arch/arm/mach-msm/pantech/presto/Kconfig
@@ -24,6 +24,7 @@ config DEFINE_LIST_PRESTO
 	select PANTECH_WDOG_WORKAROUND
 	select PANTECH_EXT4_RO_REMOUNT_ON_EMERGENCY_RESET
 	select SKY_SND_CTRL
+	select BUG_FIX_LCD_YUV_REVERSE
 	select PANTECH_KERNEL_FS_FIX
 	select PANTECH_PRESTO_LEDS_PMIC
 	select PANTECH_PRESTO_VIBRATOR_PATCH
