msm: display: Add modifications for Pantech presto
Change-Id: I0d0cdbde38197b472f749f7b66df0939a58a9895

--- a/arch/arm/mach-msm/pantech/presto/Kconfig
+++ b/arch/arm/mach-msm/pantech/presto/Kconfig
@@ -27,7 +27,16 @@ config DEFINE_LIST_PRESTO
 	select SKY_SND_CTRL
 	select SKY_MMC
 	select BUG_FIX_LCD_YUV_REVERSE
+	select F_SKYDISP_QBUG_FIX_BACKLIGHT
+	select F_SKYDISP_BOOT_LOGO_IN_KERNEL
+	select F_SKYDISP_LCD_FORCE_ONOFF
+	select F_SKYDISP_LCD_RESET
+	select F_SKYDISP_FRAMEBUFFER_32
+	select F_SKYDISP_NO_CURSOR_IN_BOOT
+	select F_SKYDISP_BEAM_ON_BUG_FIX
+	select F_SKYDISP_FIX_OVERLAY_FLICKER
 	select PANTECH_KERNEL_FS_FIX
+	select F_SKYDISP_ICS_MSM_FB_ALIGNED_4K_PAGE_BOUNDARY
 	select PANTECH_PRESTO_LEDS_PMIC
 	select PANTECH_PRESTO_VIBRATOR_PATCH
 	select FEATURE_SKY_PDL_DLOAD
