--- a/arch/arm/mach-msm/pantech/presto/Kconfig
+++ b/arch/arm/mach-msm/pantech/presto/Kconfig
@@ -15,6 +15,12 @@ config DEFINE_LIST_PRESTO
 	select PANTECH_ATNT
 	select PANTECH_PRESTO_BOARD
 	select PANTECH_CAMERA
+	select PANTECH_ERR_CRASH_LOGGING
+	select PANTECH_PWR_ONOFF_REASON_CNT
+	select SW_RESET
+	select PANTECH_WDOG_WORKAROUND
+	select PANTECH_EXT4_RO_REMOUNT_ON_EMERGENCY_RESET
+	select PANTECH_KERNEL_FS_FIX
 endif
 
 config PANTECH_PRESTO_BOARD
