--- a/drivers/input/Kconfig
+++ b/drivers/input/Kconfig
@@ -194,6 +194,9 @@ source "drivers/input/gameport/Kconfig"
 
 source "drivers/input/pantech_earjack_int/Kconfig"
 
+# Sensors - added by p12781
+source "drivers/input/sensor/Kconfig"
+
 endmenu
 
 endmenu
