presto: defconfig: Enable bluesleep for Bluetooth.
For me is best not force any feature, and include this option depending of defconfig, in this way we can test other changes in original files.

Change-Id: I3be998579a6e5b917e8291094b5a41ba5378cb80

--- a/arch/arm/configs/cyanogenmod_presto_defconfig
+++ b/arch/arm/configs/cyanogenmod_presto_defconfig
@@ -1119,6 +1119,7 @@ CONFIG_BRCM_BT_HID=y
 CONFIG_BRCM_BT=y
 # CONFIG_SKY_BT is not set
 CONFIG_PANTECH_BT=y
+CONFIG_PANTECH_PRESTO_BLUESLEEP=y
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
