mmc/wifi: Add Pantech presto modifications
Change-Id: Ie0d4525f83b35ee12e5cf713f64c414ea658b616

--- a/arch/arm/mach-msm/pantech/presto/Kconfig
+++ b/arch/arm/mach-msm/pantech/presto/Kconfig
@@ -18,12 +18,14 @@ config DEFINE_LIST_PRESTO
 	select PANTECH_AUDIO_PRESTO_AUDIENCE2020
 	select PANTECH_AUDIO_PRESTO_FAB2200
 	select PANTECH_AUDIO_SUBCHIP_CAL_TOOL
+	select PANTECH_WIFI_MMC
 	select PANTECH_ERR_CRASH_LOGGING
 	select PANTECH_PWR_ONOFF_REASON_CNT
 	select SW_RESET
 	select PANTECH_WDOG_WORKAROUND
 	select PANTECH_EXT4_RO_REMOUNT_ON_EMERGENCY_RESET
 	select SKY_SND_CTRL
+	select SKY_MMC
 	select BUG_FIX_LCD_YUV_REVERSE
 	select PANTECH_KERNEL_FS_FIX
 	select PANTECH_PRESTO_LEDS_PMIC
