--- a/arch/arm/mach-msm/pantech/presto/Kconfig
+++ b/arch/arm/mach-msm/pantech/presto/Kconfig
@@ -14,6 +14,7 @@ config DEFINE_LIST_PRESTO
 	select PANTECH
 	select PANTECH_ATNT
 	select PANTECH_PRESTO_BOARD
+	select PANTECH_CAMERA
 endif
 
 config PANTECH_PRESTO_BOARD
