--- a/drivers/media/video/msm/Kconfig
+++ b/drivers/media/video/msm/Kconfig
@@ -9,16 +9,55 @@ config MSM_CAMERA_V4L2
           native APIs are used through /dev/config0, /dev/frame0,
           and /dev/control0.
 
+comment "Custom Pantech Camera Drivers"
+config PANTECH_CAMERA
+    bool "PANTECH CAMERA DRIVERS"
+    depends on CUST_SKY_H
+    default y
+
+config PANTECH_CAMERA_HW
+    bool "Pantech Camera HW Configuration"
+    depends on MSM_CAMERA && PANTECH_CAMERA
+    default y
+    ---help---
+    Configures camera HW environment. (gpios, regulators,...)
+
+config PANTECH_CAMERA_TUNER
+    bool "Pantech Image Tuner Interface for YUV Sensors"
+    depends on MSM_CAMERA && !MSM_CAMERA_V4L2 && PANTECH_CAMERA
+    default n
+    ---help---
+    Enables image tuner interface for YUV sensors.
+
+config PANTECH_CAMERA_DEBUG
+    bool "Pantech Camera Debug with printk"
+    depends on MSM_CAMERA && PANTECH_CAMERA
+    default y
+    ---help---
+    Enables printk() debug for msm camera.
+
 comment "Camera Sensor Selection"
+config PANTECH_CAMERA_S5K4ECGX
+    bool "Sensor S5K4ECGX (YUV 5M)"
+    depends on MSM_CAMERA && ARCH_MSM8X60 && !MSM_CAMERA_V4L2 && PANTECH_CAMERA
+    default n
+    ---help---
+    Samsung LSI 5M YUV Sensor with AutoFocus
+config PANTECH_CAMERA_MT9V113
+    bool "Sensor MT9V113 (YUV VGA)"
+    depends on MSM_CAMERA && ARCH_MSM8X60 && !MSM_CAMERA_V4L2 && PANTECH_CAMERA
+    default n
+    ---help---
+    Aptina VGA YUV Sensor without AutoFocus
 config MT9T013
 	bool "Sensor mt9t013 (BAYER 3M)"
-	depends on MSM_CAMERA && !ARCH_MSM8X60 && !ARCH_MSM8960 && !MSM_CAMERA_V4L2
+	depends on MSM_CAMERA && !ARCH_MSM8X60 && !ARCH_MSM8960 && !MSM_CAMERA_V4L2 && !PANTECH_CAMERA
 	default y
 	---help---
 	  MICRON 3M Bayer Sensor with AutoFocus
 config MT9D113
 	bool "Sensor mt9d113 (YUV 2M)"
-	depends on MSM_CAMERA && ARCH_MSM8X60 && !MSM_CAMERA_V4L2
+	depends on MSM_CAMERA && ARCH_MSM8X60 && !MSM_CAMERA_V4L2 && !PANTECH_CAMERA
 	default y
 	---help---
 	  MICRON 2M YUV Sensor
@@ -27,41 +66,41 @@ config MT9D113
 	  This sensor is used only on QT device.
 config MT9D112
 	bool "Sensor mt9d112 (YUV 2M)"
-	depends on MSM_CAMERA && !ARCH_MSM8X60 && !ARCH_MSM8960 && !MSM_CAMERA_V4L2
+	depends on MSM_CAMERA && !ARCH_MSM8X60 && !ARCH_MSM8960 && !MSM_CAMERA_V4L2 && !PANTECH_CAMERA
 	default y
 	---help---
 	  MICRON 2M YUV Sensor
 config IMX074
 	bool "Sensor IMX074 (BAYER 13.5M)"
-	depends on MSM_CAMERA
+	depends on MSM_CAMERA && !PANTECH_CAMERA
 	---help---
 	SONY 13.5 MP Bayer Sensor
 config OV5640
 	bool "Sensor OV5640 (YUV 5M)"
-	depends on MSM_CAMERA && !MSM_CAMERA_V4L2
+	depends on MSM_CAMERA && !MSM_CAMERA_V4L2 && !PANTECH_CAMERA
 	default n
 	---help---
 	Omni 5M YUV Sensor
 config WEBCAM_OV7692_QRD
 	bool "Sensor OV7692 QRD(VGA YUV)"
-	depends on MSM_CAMERA && ARCH_MSM7X27A && !MSM_CAMERA_V4L2
+	depends on MSM_CAMERA && ARCH_MSM7X27A && !MSM_CAMERA_V4L2 && !PANTECH_CAMERA
 	default n
 	---help---
 	  Omni Vision VGA YUV Sensor for QRD Devices
 config MT9M114
         bool "Sensor MT9M114 (YUV 1.26M)"
-        depends on MSM_CAMERA
+        depends on MSM_CAMERA && !PANTECH_CAMERA
         ---help---
         APTINA 1.26 MP yuv Sensor
 config WEBCAM_OV7692
 	bool "Sensor OV7692 (VGA YUV)"
-	depends on MSM_CAMERA && ARCH_MSM8X60 && !MSM_CAMERA_V4L2
+	depends on MSM_CAMERA && ARCH_MSM8X60 && !MSM_CAMERA_V4L2 && !PANTECH_CAMERA
 	default y
 	---help---
 	  Omni Vision VGA YUV Sensor.
 config WEBCAM_OV9726
 	bool "Sensor OV9726 (VGA Bayer)"
-	depends on MSM_CAMERA && (ARCH_MSM8X60 || ARCH_MSM7X30 || ARCH_MSM7X27A)
+	depends on MSM_CAMERA && (ARCH_MSM8X60 || ARCH_MSM7X30 || ARCH_MSM7X27A) && !PANTECH_CAMERA
 	default n
 	---help---
 	  Omni Vision VGA Bayer Sensor.
@@ -69,26 +108,26 @@ config WEBCAM_OV9726
 #	This uses the CSI interface.
 config VX6953
 	bool "Sensor VX6953 (BAYER 5M)"
-	depends on MSM_CAMERA && (ARCH_MSM7X30 || ARCH_MSM8X60) && !MSM_CAMERA_V4L2
+	depends on MSM_CAMERA && (ARCH_MSM7X30 || ARCH_MSM8X60) && !MSM_CAMERA_V4L2 && !PANTECH_CAMERA
 	default y
 	---help---
 	STM 5M Bayer Sensor with EDOF
 config SN12M0PZ
 	bool "Sensor sn12m0pz (Bayer 12 MP)"
-	depends on MSM_CAMERA && ARCH_MSM7X30 && !MSM_CAMERA_V4L2
+	depends on MSM_CAMERA && ARCH_MSM7X30 && !MSM_CAMERA_V4L2 && !PANTECH_CAMERA
 	default y
 	---help---
 	  Sony 12 MP Bayer Sensor
 config MT9P012
 	bool "Sensor mt9p012 (BAYER 5M)"
-	depends on MSM_CAMERA && !ARCH_MSM8X60 && !MSM_CAMERA_V4L2
+	depends on MSM_CAMERA && !ARCH_MSM8X60 && !MSM_CAMERA_V4L2 && !PANTECH_CAMERA
 	default y
 	---help---
 	  MICRON 5M Bayer Sensor with Autofocus
 
 choice
 	prompt "AF module"
-	depends on MT9P012 && !ARCH_MSM8X60 && !MSM_CAMERA_V4L2
+	depends on MT9P012 && !ARCH_MSM8X60 && !MSM_CAMERA_V4L2 && !PANTECH_CAMERA
 	default MSM_CAMERA_AF_FOXCONN
 
 config MSM_CAMERA_AF_FOXCONN
@@ -105,41 +144,41 @@ endchoice
 
 config MT9P012_KM
 	bool "Sensor mt9p012 KM module (BAYER 5M)"
-	depends on MSM_CAMERA && !ARCH_MSM8X60 && !MSM_CAMERA_V4L2
+	depends on MSM_CAMERA && !ARCH_MSM8X60 && !MSM_CAMERA_V4L2 && !PANTECH_CAMERA
 	default y
 	---help---
 	  MICRON 5M Bayer Sensor KM modules with Autofocus
 
 config MT9E013
 	bool "Sensor mt9e013 module (BAYER 8M)"
-	depends on MSM_CAMERA && (ARCH_MSM7X30 || ARCH_MSM8X60 || ARCH_MSM7X27A)
+	depends on MSM_CAMERA && (ARCH_MSM7X30 || ARCH_MSM8X60 || ARCH_MSM7X27A) && !PANTECH_CAMERA
 	default n
 	---help---
 	  Aptina 8M Bayer Sensor modules with Autofocus
 
 config IMX074_ACT
 	bool "Actuator IMX074 (BAYER 13.5M)"
-	depends on MSM_CAMERA
+	depends on MSM_CAMERA && !PANTECH_CAMERA
 	---help---
 	Actuator for SONY 13.5 MP Bayer Sensor
 
 config S5K3E2FX
 	bool "Sensor s5k3e2fx (Samsung 5M)"
-	depends on MSM_CAMERA && !ARCH_MSM8X60 && !MSM_CAMERA_V4L2
+	depends on MSM_CAMERA && !ARCH_MSM8X60 && !MSM_CAMERA_V4L2 && !PANTECH_CAMERA
 	default y
 	---help---
 	  Samsung 5M with Autofocus
 
 config QS_S5K4E1
 	bool "Sensor qs_s5k4e1 (Samsung 5M)"
-	depends on MSM_CAMERA && ARCH_MSM8X60 && !MSM_CAMERA_V4L2
+	depends on MSM_CAMERA && ARCH_MSM8X60 && !MSM_CAMERA_V4L2 && !PANTECH_CAMERA
 	default y
 	---help---
 	  Samsung 5M with Autofocus
 
 config S5K4E1
 	bool "Sensor Sensor s5k4e1 (Samsung 5M)"
-	depends on MSM_CAMERA
+	depends on MSM_CAMERA && !PANTECH_CAMERA
 	default n
 	---help---
 	  Support for S5k4E1 samsung sensor driver.
@@ -156,7 +195,7 @@ config DW9712_ACT
 
 config MSM_CAMERA_FLASH_SC628A
 	bool "Qualcomm MSM camera sc628a flash support"
-	depends on MSM_CAMERA
+	depends on MSM_CAMERA && !PANTECH_CAMERA
 	default n
 	---help---
 	  Enable support for LED flash for msm camera.
@@ -175,11 +214,11 @@ config IMX072
 
 config OV2720
 	bool "Sensor ov2720 (Omnivision 2MP)"
-	depends on MSM_CAMERA
+	depends on MSM_CAMERA && !PANTECH_CAMERA
 
 config VB6801
 	bool "Sensor vb6801"
-	depends on MSM_CAMERA && !ARCH_MSM8X60 && !MSM_CAMERA_V4L2
+	depends on MSM_CAMERA && !ARCH_MSM8X60 && !MSM_CAMERA_V4L2 && !PANTECH_CAMERA
 	---help---
 	  5M with flash
 
@@ -201,7 +240,7 @@ config MSM_ACTUATOR
 config MSM_GEMINI
 	tristate "Qualcomm MSM Gemini Jpeg Engine support"
 	depends on MSM_CAMERA && (ARCH_MSM7X30 || ARCH_MSM8X60 || ARCH_MSM8960)
-	default n
+	default M
 	---help---
 	  Enable support for Gemini Jpeg Engine
 
@@ -225,7 +264,7 @@ config QUP_EXCLUSIVE_TO_CAMERA
 
 config S5K3L1YX
 	bool "Sensor S5K3L1YX (BAYER 12M)"
-	depends on MSM_CAMERA
+	depends on MSM_CAMERA && !PANTECH_CAMERA
 	---help---
 		Samsung 12 MP Bayer Sensor with auto focus, uses
 		4 mipi lanes, preview config = 1984 * 1508 at 30 fps,
@@ -242,6 +281,6 @@ config MSM_V4L2_VIDEO_OVERLAY_DEVICE
 
 config OV7692
 	bool "Sensor OV7692 (VGA YUV)"
-	depends on MSM_CAMERA
+	depends on MSM_CAMERA && !PANTECH_CAMERA
 	---help---
 		Omni Vision VGA YUV Sensor.
