--- a/arch/arm/configs/evervolv_presto_defconfig
+++ b/arch/arm/configs/evervolv_presto_defconfig
@@ -1,5 +1,5 @@
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-cyanogenmod"
+CONFIG_LOCALVERSION="-evervolv"
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
 CONFIG_IKCONFIG=y
